[gd_scene load_steps=8 format=3 uid="uid://we64qri3wg6a"]

[ext_resource type="Script" path="res://data/src/scenes/map_viewer_tool.gd" id="1_erta2"]
[ext_resource type="PackedScene" uid="uid://c738or0v7aejx" path="res://data/src/scenes/hex_grid.tscn" id="2_w6v18"]
[ext_resource type="PackedScene" uid="uid://br2e5np03liyc" path="res://data/src/ui/simple_button.tscn" id="3_ll0se"]
[ext_resource type="Texture2D" uid="uid://2f15un4uj2k3" path="res://data/assets/icons/start.png" id="4_hky5c"]
[ext_resource type="Texture2D" uid="uid://c4pdyudxq706r" path="res://data/assets/icons/update.png" id="5_odyen"]
[ext_resource type="PackedScene" uid="uid://d4cumauu46f1m" path="res://data/src/ui/slider_display.tscn" id="6_2ych8"]

[sub_resource type="Environment" id="Environment_kghhm"]

[node name="MapViewerTool" type="Node3D"]
script = ExtResource("1_erta2")
metadata/_edit_vertical_guides_ = []

[node name="HexGrid" parent="." instance=ExtResource("2_w6v18")]
unique_name_in_owner = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_kghhm")

[node name="OmniLight3D" type="OmniLight3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.94886, 1.61454, 3.51925)
light_color = Color(0.886275, 0.87451, 0.282353, 1)
light_size = 100.0
omni_attenuation = 0.0228763

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 0.404599, 0.914494, 0, -0.914494, 0.404599, 5.67533, 3.82059, 10.0348)
light_color = Color(1, 1, 0.360784, 1)
sky_mode = 1

[node name="Cam" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 3.88401, 14.3893, 16.1337)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="PlayButton" parent="CanvasLayer/VBoxContainer/HBoxContainer" instance=ExtResource("3_ll0se")]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("4_hky5c")

[node name="UpdateButton" parent="CanvasLayer/VBoxContainer/HBoxContainer" instance=ExtResource("3_ll0se")]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("5_odyen")

[node name="PartySliderDisplay" parent="CanvasLayer/VBoxContainer/HBoxContainer" instance=ExtResource("6_2ych8")]
unique_name_in_owner = true
layout_mode = 2

[node name="GridSizeSliderDisplay" parent="CanvasLayer/VBoxContainer/HBoxContainer" instance=ExtResource("6_2ych8")]
unique_name_in_owner = true
layout_mode = 2

[node name="StackHeightSliderDisplay" parent="CanvasLayer/VBoxContainer/HBoxContainer" instance=ExtResource("6_2ych8")]
unique_name_in_owner = true
layout_mode = 2

[node name="CubeSizeSliderDisplay" parent="CanvasLayer/VBoxContainer/HBoxContainer" instance=ExtResource("6_2ych8")]
unique_name_in_owner = true
layout_mode = 2
